--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -25,3 +25,9 @@ dotnet_diagnostic.BL0005.severity = none
 
 # CA1861: Avoid constant arrays as arguments
 dotnet_diagnostic.CA1861.severity = none
+
+# VSTHRD103: Call async methods when in an async method
+dotnet_diagnostic.VSTHRD103.severity = none
+
+# VSTHRD200: Use "Async" suffix for async methods
+dotnet_diagnostic.VSTHRD200.severity = none
