--- a/tests/Communication.UI.Blazor.Tests/Communication.UI.Blazor.Tests.csproj
+++ b/tests/Communication.UI.Blazor.Tests/Communication.UI.Blazor.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bunit" />
     <PackageReference Include="coverlet.collector">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
