--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="Azure.Communication.Identity" Version="1.3.1" />
+    <PackageVersion Include="bunit" Version="1.28.9" />
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
     <PackageVersion Include="FluentAssertions" Version="6.12.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
@@ -13,7 +14,7 @@
     <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.10.48" />
     <PackageVersion Include="Moq" Version="4.20.70" />
     <PackageVersion Include="PosInformatique.FluentAssertions.Json" Version="1.2.0" />
-    <PackageVersion Include="PosInformatique.Moq.Analyzers" Version="1.4.0" />
+    <PackageVersion Include="PosInformatique.Moq.Analyzers" Version="1.5.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556" />
     <PackageVersion Include="xunit" Version="2.8.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.0" />
