--- a/src/Communication.UI.Blazor/Communication.UI.Blazor.csproj
+++ b/src/Communication.UI.Blazor/Communication.UI.Blazor.csproj
@@ -13,11 +13,13 @@
     <PackageReleaseNotes>
       1.2.0
       - Add the following APIs in the CallAdapter:
+        - GetStateAsync()
+        - LowerHandAsync()
+        - OnStateChanged event.
+        - RaiseHandAsync()
         - QueryCamerasAsync()
         - QueryMicrophonesAsync()
         - QuerySpeakersAsync()
-        - LowerHandAsync()
-        - RaiseHandAsync()
 
       1.1.0
       - Refactoring to separate the CallAdapter and the CallComposite to reflect the architecture of the Communication UI Library.
