--- a/src/Communication.UI.Blazor/Communication.UI.Blazor.csproj
+++ b/src/Communication.UI.Blazor/Communication.UI.Blazor.csproj
@@ -57,11 +57,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFiles Remove="..\..\stylecop.json" />
-    <AdditionalFiles Include="stylecop.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
   </ItemGroup>
 
@@ -74,9 +69,11 @@
   <ItemGroup>
     <Content Update="AzureCommunicationReact\package-lock.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <Pack>false</Pack>
     </Content>
     <Content Update="AzureCommunicationReact\package.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <Pack>false</Pack>
     </Content>
   </ItemGroup>
 
